fix alignment of sweets-item

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ button {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .info {
